--- a/test.html
+++ b/test.html
@@ -8,10 +8,6 @@
 </head>
 <body>
     test
-    <script src="https://drive.google.com/uc?export=download&id=1EUyKXn3C4q3ZBSxg4vCqGxbH_Wt1seJY"></script>
-
-    <script>
-        alert(test);
-    </script>
+    <script src="https://cdn.jsdelivr.net/gh/kpycnuk/regdracs/test.js"></script>
 </body>
 </html>
